kustomize/apps/monitoring/grafana/ingressroutes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  namespace: vms
  name: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      priority: 300
      match: Host (`example.com`) && ( PathPrefix(`/monitoring`) || PathPrefix(`/swagger`) || PathPrefix(`/apis/features.grafana.app`) )
      services:
        - kind: Service
          name: grafana
          port: 80
